--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+###########################
+#### Custom ignores #######
+
+# Gemfile.lock should be checked in for apps, but not for libraries
+Gemfile.lock
+
+###########################
+#### Generated ignores ####
+
 #### joe made this: http://goel.io/joe
 
 #### ruby ####
