--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Gemfile.lock should be checked in for apps, but not for libraries
 Gemfile.lock
 
+# github-markdown-preview previews
+*.md.html
+
 ###########################
 #### Generated ignores ####
 
@@ -69,7 +72,8 @@ build-iPhoneSimulator/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
