Improve test coverage for OneTimeServer

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,9 @@
 AllCops:
   # Suppress complaints about post-2.0 syntax
   TargetRubyVersion: 2.4
-  # Exclude legacy tests
+  # Exclude IDEA coverage output
   Exclude:
-    - 'test/**'
+    - 'out/**/*'
 
 # Allow one line around block body (Layout/EmptyLines will still disallow two or more)
 Layout/EmptyLinesAroundBlockBody:
