Metrics/LineLength has the wrong namespace - should be Layout

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,13 +25,13 @@ Layout/MultilineMethodCallIndentation:
 Layout/MultilineOperationIndentation:
   Enabled: false
 
+Layout/MethodLength:
+  CountComments: false  # count full line comments?
+  Max: 20
+
 # Reasonable line-length check; it's too easy for the cure to be worse than the disease
 Metrics/LineLength:
   Max: 150
-
-Metrics/MethodLength:
-  CountComments: false  # count full line comments?
-  Max: 20
 
 # Confusing and weird
 Naming/VariableNumber:
